--- a/app/mast_toolkit/templates/mast/create_survey.html
+++ b/app/mast_toolkit/templates/mast/create_survey.html
@@ -13,7 +13,7 @@
 
         <div class="row">
             <div class="col">
-                <button class="btn btn-success" action="submit">Save changes</button>
+                <button class="btn btn-success" action="submit">Create my maturity assessment!!</button>
                 <p class="form-text text-muted">
                     By clicking create survey you are agreeing for us to collect data on your behalf, and agreeing to our <a href="https://www.aristotlemetadata.com/legal/privacy-policy">privacy policy</a>.
                     <br>
