--- a/app/mast_toolkit/templates/base.html
+++ b/app/mast_toolkit/templates/base.html
@@ -16,13 +16,19 @@
       .likert {
         height: 4em;
       }
-      input[type=radio]{
-        /* transform:scale(1.5); */
+      input[type=checkbox] {
+        height: 1.25em;
+        width: 1.25em;
+        margin-right: 0.5em;
+      }
+      input[type=radio] {
         height: 1.5em;
         width: 1.5em;
         /* box-shadow: 0 0 0 1px gray; */
         border-radius: 50%;
         margin: auto;
+      }
+      .likert-table input[type=radio] {
         display: block;
         margin-top: 1em;
         margin-bottom: 1em;
@@ -33,6 +39,7 @@
       .action-option {
         min-height:2em;
       }
+      .data_uses_checkboxes label,
       .action-option label {
         font-weight: normal;
       }
