--- a/app/mast_toolkit/templates/components/survey_management_form.html
+++ b/app/mast_toolkit/templates/components/survey_management_form.html
@@ -54,17 +54,33 @@
         </p>
     </div>
     <div class="col-5">
-            <details>
-                <summary>Click here to see the additional questions that will be included.</summary>
-                <div class="card card-body">
-                    <ul>
-                        {% for q in qualitative_questions %}
-                        <li>{{q}}</li>
-                        {% endfor %}
-                    </ul>
-                </div>
-            </details>
+        <details>
+            <summary>Click here to see the additional questions that will be included.</summary>
+            <div class="card card-body">
+                <ul>
+                    {% for q in qualitative_questions %}
+                    <li>{{q}}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </details>
+    </div>
+</div>
+<div class="row my-5">
+    <label class="col-2" for="{{form.include_data_used_or_created.id_for_label}}">{{ form.include_data_used_or_created.label }}:</label>
+    <div class="col-5">
+        {{ form.include_data_used_or_created }}
+        <p class="form-text text-muted">
+            If selected, we will include the closing question: <br> "{{ data_uses_question }}"
         </p>
+    </div>
+    <div class="col-5">
+        <div class="card card-body border-warning small">
+            <strong>Warning notice</strong>
+            When collecting information about data, users may share information about assets within your organisation that may be sensitive, such as names of private or sensitive data assets.
+            <br>
+            We take the privacy of data collected using this assessment very seriously, however consider the risks before selecting this options.
+        </div>
     </div>
 </div>
 <div class="row  my-5">
@@ -84,7 +100,7 @@
         </div>
     </div>
 </div>
-<div class="row  my-5">
+<div class="row my-5">
     <label class="col-2" for="{{form.confirmation_message.id_for_label}}">{{ form.confirmation_message.label }}:</label>
     <div class="col-5">
         <div>
