--- a/app/mast_toolkit/templates/mast/dashboard/base.html
+++ b/app/mast_toolkit/templates/mast/dashboard/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -35,89 +36,111 @@
       textarea {
         box-shadow: 0 0 0 1px gray;
       }
+      .team-table-border {
+        border-left: 1px solid var(--bs-primary);
+      }
+      .small-cool-mast {
+        height: 50px;
+        width: 50px;
+        filter: drop-shadow(1px 1px 1px #222);
+      }
+      @media print
+      {    
+          @page {
+            size: landscape
+          }
+          .page-break-before {
+            page-break-before: always;
+          }
+          .page-break-after {
+            page-break-after: always;
+          }
+          .sidebar {
+              display: none !important;
+          }
+          .print-hide {
+            display: none !important;
+          }
+      }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   </head>
   <body>
 
-<div class="d-flex flex-row ">
-    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light vh-100 sticky-top" style="width: 280px;">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-      <span class="fs-4">MAST Data Governance Maturity Toolkit</span>
-    </a>
-    <hr>
-    {{ survey.title }}
-    <hr>
-    <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-item">
-        <a href="{% url 'survey_dashboard' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'dashboard' %}active{% else %}link-dark{% endif %}" aria-current="page">
-          <i class="bi bi-speedometer2 pe-3"></i>
-          Dashboard
-        </a>
-      </li>
-      <li>
-        <a href="{% url 'survey_manage' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'edit' %}active{% else %}link-dark{% endif %}">
-          <i class="bi bi-tools pe-3"></i>
-          Edit
-        </a>
-      </li>
-      <li>
-        <a href="{% url 'survey_dashboard_report' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'report' %}active{% else %}link-dark{% endif %}">
-          <i class="bi bi-graph-up-arrow pe-3"></i>
-          Report
-        </a>
-        {% if active_dashboard_tab == 'report' %}
-          <ul class="nav nav-pills flex-column ps-5">
-            <li class="nav-item">
-              <a href="#organisation" class="nav-link link-dark">
-                <!-- <i class="bi bi-speedometer2 pe-3"></i> -->
-                Organisation
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#teams" class="nav-link link-dark">
-                <!-- <i class="bi bi-speedometer2 pe-3"></i> -->
-                Teams
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#roles" class="nav-link link-dark">
-                <!-- <i class="bi bi-speedometer2 pe-3"></i> -->
-                Roles
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#download" class="nav-link link-dark">
-                <!-- <i class="bi bi-speedometer2 pe-3"></i> -->
-                Download
-              </a>
-            </li>
-          </ul>
-        {% endif %}
-      </li>
-      <li>
-        <a href="{% url 'survey_dashboard_responses' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'responses' %}active{% else %}link-dark{% endif %}">
-          <i class="bi bi-table pe-3"></i>
-          Responses
-        </a>
-      </li>
-      <li>
-        <a href="{% url 'survey_dashboard_delete' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'delete' %}active{% else %}link-dark{% endif %}">
-          <i class="bi-trash3 pe-3"></i>
-          Delete
-        </a>
-      </li>
+  <div class="d-flex flex-row">
+    <div class="d-flex flex-column flex-shrink-0 p-3 bg-light vh-100 sticky-top sidebar" style="width: 280px;">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <span class="fs-4">MAST Data Governance Maturity Toolkit</span>
+      </a>
+      <hr>
+      {{ survey.title }}
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="{% url 'survey_dashboard' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'dashboard' %}active{% else %}link-dark{% endif %}" aria-current="page">
+            <i class="bi bi-speedometer2 pe-3"></i>
+            Dashboard
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'survey_manage' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'edit' %}active{% else %}link-dark{% endif %}">
+            <i class="bi bi-tools pe-3"></i>
+            Edit
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'survey_dashboard_report' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'report' %}active{% else %}link-dark{% endif %}">
+            <i class="bi bi-graph-up-arrow pe-3"></i>
+            Report
+          </a>
+          {% if active_dashboard_tab == 'report' %}
+            <ul class="nav nav-pills flex-column ps-5">
+              <li class="nav-item">
+                <a href="#organisation" class="nav-link link-dark">
+                  Organisation
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#teams" class="nav-link link-dark">
+                  Teams
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#roles" class="nav-link link-dark">
+                  Activities
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="#methodology" class="nav-link link-dark">
+                  Methodology
+                </a>
+              </li>
+            </ul>
+          {% endif %}
+        </li>
+        <li>
+          <a href="{% url 'survey_dashboard_responses' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'responses' %}active{% else %}link-dark{% endif %}">
+            <i class="bi bi-table pe-3"></i>
+            Responses
+          </a>
+        </li>
+        <li>
+          <a href="{% url 'survey_dashboard_delete' survey_pk %}" class="nav-link {% if active_dashboard_tab == 'delete' %}active{% else %}link-dark{% endif %}">
+            <i class="bi-trash3 pe-3"></i>
+            Delete
+          </a>
+        </li>
+      </ul>
+      <hr>
+      <ul class="nav nav-pills">
+        <li style="margin-left: -20px;">
+          <a href="#" class="nav-link {% if active_dashboard_tab == 'help' %}active{% else %}link-dark{% endif %}">
+            <img src="{% static 'logos/mast-logo-blank.png' %}" alt="" class="me-2 small-cool-mast">
+            About
+          </a>
+        </li>
     </ul>
-    <hr>
-    <ul class="nav nav-pills">
-      <li>
-        <a href="#" class="nav-link {% if active_dashboard_tab == 'help' %}active{% else %}link-dark{% endif %}">
-          <i class="bi bi-life-preserver pe-3"></i>
-          Help and About
-        </a>
-      </li>
-  </ul>
-</div>
+  </div>
 
   <div class="d-flex flex-column flex-grow-1 p-3">
     {% block dashboard_content %}
