--- a/app/mast_toolkit/templates/mast/dashboard/responses_list.html
+++ b/app/mast_toolkit/templates/mast/dashboard/responses_list.html
@@ -1,30 +1,43 @@
 {% extends "mast/dashboard/base.html" %}
 
-{% block title %}{{ object.title }}{% endblock %}
+{% block title %}{{ survey.title }}{% endblock %}
 
 {% block dashboard_content %}
-<h1>Survey - {{ object.title }}</h1>
+<h1>Survey - {{ survey.title }}</h1>
 
 <div class="alert alert-warning">
-    <div class="alert-heading">Your secret link is <a href="{{ object.get_absolute_url}}">{{object.id}}</a>.</div>
+    <div class="alert-heading">Your secret link is <a href="{{ survey.get_absolute_url}}">{{survey.id}}</a>.</div>
     <br>
     This link will bring you back to this page, and allow you to manage this manage this maturity survey.
     Only share this link with people you trust.
 </div>
-
+<p>
+    Below are all responses collected so far.
+</p>
 <div>
     <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>User Email</th>
+                <th>Response Date</th>
+                <th>Team Name</th>
+                <th><small class="text-muted">Coming soon</small></th>
+            </tr>
+        </thead>
+        <tbody>
         {% for response in object_list %}
         <tr>
+            <td>{{ forloop.counter }}</td>
             <td>{{ response.email }}</td>
             <td>{{ response.response_date }}</td>
             <td>{{ response.team.name }}</td>
-            <td>{{ response.beliefs_metadata_1  }}</td>
-            <td>{{ response.beliefs_analysis_1   }}</td>
-            <td>{{ response.beliefs_standards_1 }}</td>
-            <td>{{ response.beliefs_teamwork_1  }}</td>
+            <td>
+                <a href="#">See more...</a><br>
+            </td>
         </tr>
         {% endfor %}
+        </tbody>
     </table>
 </div>
 
