--- a/app/mast_toolkit/templates/mast/dashboard/base.html
+++ b/app/mast_toolkit/templates/mast/dashboard/base.html
@@ -47,7 +47,7 @@
       @media print
       {    
           @page {
-            size: landscape
+            /* size: landscape */
           }
           .page-break-before {
             page-break-before: always;
