--- a/app/mast_toolkit/templates/static/home.html
+++ b/app/mast_toolkit/templates/static/home.html
@@ -186,7 +186,7 @@
                     <p><a href="https://mastmethodology.com" class="btn btn-primary btn-lg">Learn more about the MAST Methodology</a></p>
                 </div>
                 <div class="col-md-6">
-                    <figure class="figure">
+                    <figure class="d-flex flex-column align-items-center">
                         <img src="{% static 'home/mast-toolkit-wheel.png' %}" alt="MAST Methodology Graphic" class="img-fluid rounded">
                         <figcaption class="pt-2 figure-caption text-center">Build through years of experience, the MAST/IDEAL Methodology breaks down data governance to core activities understandable at every level.</figcaption>
                       </figure>                      
